--- a/CHANGES
+++ b/CHANGES
@@ -72,7 +72,8 @@
 
  * INCOMPATIBLE CHANGE: "finish" works like gdb - stop just before the most
    recent method finishes. Will now accept a number which stops that many
-   frames completed.
+   frames completed. (Note that return line numbers will be funny, the
+   first line of the method until Ruby 1.8.7.)
 
 - Emacs interaction drastically reworked, expanded, and improved.
 
