--- a/doc/ruby-debug.texi
+++ b/doc/ruby-debug.texi
@@ -1237,21 +1237,34 @@ Add @var{PATH} to @code{$LOAD_PATH}
 @item --keep-frame-binding
 @cindex @code{--keep-frame-binding}
 Bindings are used to set the proper environment in evaluating
-expression inside the debugger.
+expression inside the debugger. Under normal circumstances, I don't
+believe most people will ever need this option.
 
 By default, the debugger doesn't create binding object for each frame
 when the frame is created, i.e. when a call is performed. Creating a
 binding is an expensive operation and has been a major source of
 performance problems.
 
-Instead, the debugger create a binding when there is a need to
-evaluate expressions. This artificial binding that is created can be
-quite different from the real one.  In particular, in performing
-constant and module name resolution.
+Instead, the debugger creates a binding when there is a need to
+evaluate expressions. The artificial binding that is created might be
+different from the real one.  In particular, in performing constant
+and module name resolution.
 
 However it's still possible to restore the old, slower behavior by
 using this option or by setting @code{Debugger.keep_frame_binding =
-true}.
+true}. There are two possibilities for which you might want to use
+this option. 
+
+First, if you think there's a bug in the evaluation of variables, you
+might want to set this to see if this corrects things.
+
+Second, since the internal structures that are used here @code{FRAME}
+and @code{SCOPE} are not part of the Ruby specification, it is
+possible they can change with newer releases; so here this option this
+may offer a remedy. (But you'll probably also have to hack the C code
+since it's likely under this scenario that ruby-debug will no longer
+compile.) In fact, in Ruby 1.9 these structures have changed and that
+is partly why this debugger doesn't work on Ruby 1.9.
 
 @item -m | --post-mortem
 @cindex @code{-m}
